# tenda-5g01-router-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tenda_config.py  tenda_ensure_4g.py  tenda_status.py  tenda_stay_on_5g.py
.github/workflows/: ci.yaml  ruff.yaml
.omc/: project-memory.json
.omc/sessions/: 459ff020-3cef-4df5-b017-b04c6b4ac4b7.json  a6f51f9a-6c67-474c-abdd-2f72770247d8.json
.omc/state/: idle-notif-cooldown.json
